--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "node-localstorage": "^3.0.5",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "pdfkit": "^0.15.0"
   }
 }
