--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^7.3.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.0",
     "pdfkit": "^0.15.0"
