--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "pm2-start": "pm2 start app.js --name traininggeneration",
+    "pm2-stop": "pm2 stop traininggeneration",
+    "pm2-restart": "pm2 restart traininggeneration",
+    "pm2-delete": "pm2 delete traininggeneration",
+    "pm2-logs-localhost": "npx pm2 logs"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +27,7 @@
     "node-cron": "^3.0.3",
     "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.0",
-    "pdfkit": "^0.15.0"
+    "pdfkit": "^0.15.0",
+    "pm2": "^5.4.2"
   }
 }
