--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "pm2-start": "pm2 start ecosystem.config.js",
+    "pm2-start": "PORT=8000 pm2 start ecosystem.config.js",
     "pm2-stop": "pm2 stop traininggeneration",
     "pm2-restart": "pm2 restart traininggeneration",
     "pm2-delete": "pm2 delete traininggeneration",
