Atualizando README com os passos para construção do projeto e ajustando o nome do arquivo de certificados no backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,11 @@ FRONTEND_URL =
 SESSION_SECRET =
 SECRET_KEY_JWT =
 KEY_OF_CONNECTION_IA =
-RATE_LIMIT_OF_TRAINING =
-RATE_LIMIT_OF_PDF =
+RATE_LIMIT_TIME_OF_TRAINING = 
+RATE_LIMIT_TIME_OF_REPORT = 
+RATE_LIMIT_MAX_OF_TRAINING = 
+RATE_LIMIT_MAX_OF_REPORT = 
 USE_MOCK =
 LIMIT_TO_LOCK =
 MINUTE_TO_BLOCK =
+ENVIRONMENT = 
